# duckdb-spatial

./: CMakeLists.txt  extension_config.cmake  generate_function_reference.py  vcpkg.json
.github/workflows/: MainDistributionPipeline.yml
docs/: functions.md
src/sgl/: sgl.cpp  sgl.hpp  sgl_test.cpp
src/spatial/: CMakeLists.txt  spatial_extension.cpp  spatial_geoarrow.cpp  spatial_geoarrow.hpp  spatial_types.cpp  spatial_types.hpp
src/spatial/geometry/: CMakeLists.txt  geometry_processor.hpp  geometry_serialization.cpp  geometry_serialization.hpp  geometry_type.hpp  vertex.hpp
src/spatial/index/rtree/: rtree_index.cpp  rtree_index.hpp  rtree_index_create_logical.cpp  rtree_index_create_physical.cpp  rtree_index_create_physical.hpp  rtree_index_plan_scan.cpp  rtree_index_pragmas.cpp  rtree_index_scan.cpp  rtree_module.hpp
src/spatial/modules/: CMakeLists.txt
src/spatial/modules/gdal/: CMakeLists.txt  gdal_functions.cpp  gdal_module.cpp  gdal_module.hpp
src/spatial/modules/geos/: geos_geometry.hpp  geos_module.cpp  geos_module.hpp  geos_serde.cpp  geos_serde.hpp
src/spatial/modules/main/: spatial_functions.hpp  spatial_functions_aggregate.cpp  spatial_functions_cast.cpp  spatial_functions_scalar.cpp  spatial_functions_table.cpp
src/spatial/modules/mvt/: CMakeLists.txt  mvt_module.cpp  mvt_module.hpp
src/spatial/modules/osm/: osm_module.cpp  osm_module.hpp
src/spatial/modules/proj/: CMakeLists.txt  memvfs.c  proj_module.cpp  proj_module.hpp
src/spatial/modules/shapefile/: shapefile_module.cpp  shapefile_module.hpp
src/spatial/modules/wkb/: CMakeLists.txt  README.md  wkb_module.cpp  wkb_module.hpp
src/spatial/operators/: spatial_join_logical.cpp  spatial_join_logical.hpp  spatial_join_optimizer.cpp  spatial_join_physical.cpp  spatial_join_physical.hpp  spatial_operator_extension.cpp
src/spatial/util/: binary_reader.hpp  distance_extract.hpp  function_builder.cpp  function_builder.hpp  math.cpp
test/sql/gdal/: st_read_gdb.test
test/sql/geometry/: geometry_types.test  op_intersect.test  st_2d_fromwkb.test  st_affine.test  st_asgeojson.test  st_ashexwkb.test  st_azimuth.test  st_centroid.test  st_distance.test  st_expand.test  st_has.test  st_hilbert.test  st_interiorringn.test  st_intersects_extent.test  st_makebox2d.test  st_makepoint.test
test/sql/geos/: st_minimumrotatedrectangle.test
test/sql/index/: rtree_multi.test  rtree_persistence_wal.test
test/sql/join/: spatial_join_cte.test
test/sql/mvt/: st_asmvt.test  st_asmvt_linestring.test  st_asmvtgeom.test  st_tileenvelope.test
test/sql/postgis/: st_interpolatepoint.test  st_linelocatepoint.test  st_locatealong.test  st_locatebetween.test
